<resources>
    <string name="app_name">Learn Braille</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_help_message">No help message</string>
    <string name="voice_record_denial">Вы не сможете использовать возможности голосового управления</string>
    <string name="preference_use_debug_lessons">use_debug_lessons</string>
    <string name="preference_enable_buzz">enable_buzz</string>
    <string name="preference_enable_toasts">enable_toasts</string>
    <string name="preference_current_user">current_user</string>
    <string name="preference_speech_recognition_enabled">speech_recognition_enabled</string>
    <string name="preference_golubina_book_steps_enabled">golubina_book_steps_enabled</string>
    <string name="preference_slate_stylus_steps_enabled">slate_stylus_steps_enabled</string>
    <string name="preference_traverse_dots_in_enumeration_order">traverse_dots_in_enumeration_order</string>
    <string name="preference_enable_additional_announcements">enable_additional_announcements</string>
    <string name="preference_practice_use_only_known_materials">practice_use_only_known_materials</string>
    <string name="preference_extended_accessibility">extended_accessibility</string>
    <string name="preference_additional_qrcode_button_enabled">additional_qrcode_button_enabled</string>
    <string name="preferences_is_write_mode_first">is_write_mode_first</string>
    <string name="preference_teacher_mode_enabled">teacher_mode_enabled</string>
    <string name="braille_dots_mode_writing">Порядок точек: "письмо"</string>
    <string name="braille_dots_mode_reading">Порядок точек: "чтение"</string>
    <string name="input_correct">Правильно!</string>
    <string name="input_incorrect">Неправильно!</string>
    <string name="input_loading">Подождите, задание загружается</string>
    <string name="input_hint_template">Ответ: точки %s</string>
    <string name="input_dots_hint_template">Ответ: %s</string>
    <string name="input_dots_reading_hint_1">точка 1 слева сверху</string>
    <string name="input_dots_reading_hint_2">точка 2 слева посередине</string>
    <string name="input_dots_reading_hint_3">точка 3 слева снизу</string>
    <string name="input_dots_reading_hint_4">точка 4 справа сверху</string>
    <string name="input_dots_reading_hint_5">точка 5 справа посередине</string>
    <string name="input_dots_reading_hint_6">точка 6 справа снизу</string>
    <string name="input_dots_writing_hint_4">точка 4 слева сверху</string>
    <string name="input_dots_writing_hint_5">точка 5 слева посередине</string>
    <string name="input_dots_writing_hint_6">точка 6 слева снизу</string>
    <string name="input_dots_writing_hint_1">точка 1 справа сверху</string>
    <string name="input_dots_writing_hint_2">точка 2 справа посередине</string>
    <string name="input_dots_writing_hint_3">точка 3 справа снизу</string>
    <string name="input_letter_intro_template">Введите букву: %s</string>
    <string name="input_latin_letter_intro_template">Введите латинскую букву: %s</string>
    <string name="input_greek_letter_intro_template">Введите греческую букву: %s</string>
    <string name="input_digit_intro_template">Введите цифру: %s</string>
    <string name="input_special_intro_template">Введите символ: %s</string>
    <string name="input_math_intro_template">Введите математический символ: %s</string>
    <string name="input_special_intro_dot">Введите символ: Литературная точка</string>
    <string name="input_special_intro_hyphen">Введите символ: Дефис</string>
    <string name="input_special_intro_comma">Введите запятую</string>
    <string name="input_special_intro_exclamation">Введите восклицательный знак</string>
    <string name="input_special_intro_question">Введите вопросительный знак</string>
    <string name="input_special_intro_quotation_left">Введите открывающую кавычку</string>
    <string name="input_special_intro_quotation_right">Введите закрывающую кавычку</string>
    <string name="input_special_intro_parenthesis_left">Введите левую литературную скобку</string>
    <string name="input_special_intro_parenthesis_right">Введите правую литературную скобку</string>
    <string name="input_special_intro_asterisk">Введите звёздочку</string>
    <string name="input_special_intro_colon">Введите двоеточие</string>
    <string name="input_special_intro_semicolon">Введите точку с запятой</string>
    <string name="input_special_intro_stress">Введите знак ударения</string>
    <string name="input_mod_greek_capital">Введите признак большой буквы греческого алфавита</string>
    <string name="input_mod_latin_capital">Введите признак большой буквы латинского алфавита</string>
    <string name="input_mod_latin_small">Введите признак малой буквы латинского алфавита</string>
    <string name="input_mod_ru_capital">Введите признак большой буквы русского алфавита</string>
    <string name="input_mod_num_sign">Введите цифровой знак</string>
    <string name="input_mod_bold">Введите признак жирного шрифта</string>
    <string name="input_mod_italic">Введите признак курсивного шрифта</string>
    <string name="input_music_note_c">Введите ноту ДО</string>
    <string name="input_music_note_d">Введите ноту РЕ</string>
    <string name="input_music_note_e">Введите ноту МИ</string>
    <string name="input_music_note_f">Введите ноту ФА</string>
    <string name="input_music_note_g">Введите ноту СОЛЬ</string>
    <string name="input_music_note_a">Введите ноту ЛЯ</string>
    <string name="input_music_note_b">Введите ноту СИ</string>
    <string name="input_music_rest_8th">Введите паузу длительности одна восьмая</string>
    <string name="input_music_rest_4th">Введите паузу длительности одна четверть</string>
    <string name="input_music_rest_half">Введите паузу половинной длительности</string>
    <string name="input_music_rest_full">Введите целую паузу</string>
    <string name="input_music_counter_octave">Введите обозначение контроктавы</string>
    <string name="input_music_octave_big">Введите обозначение большой октавы</string>
    <string name="input_music_octave_small">Введите обозначение малой октавы</string>
    <string name="input_music_octave1">Введите обозначение первой октавы</string>
    <string name="input_music_octave2">Введите обозначение второй октавы</string>
    <string name="input_music_octave3">Введите обозначение третьей октавы</string>
    <string name="input_music_octave4">Введите обозначение четвёртой октавы</string>
    <string name="input_music_hyphen">Введите музыкальный знак переноса</string>
    <string name="input_music_sharp">Введите диез</string>
    <string name="input_music_flat">Введите бемоль</string>
    <string name="input_music_natural">Введите бекар</string>
    <string name="input_math_plus">Введите знак Плюс</string>
    <string name="input_math_minus">Введите знак Минус</string>
    <string name="input_math_dot_mult">Введите знак умножения точкой</string>
    <string name="input_math_cross_mult">Введите знак умножения крестом</string>
    <string name="input_math_division_fraction">Введите знак деления (углом)</string>
    <string name="input_math_division">Введите знак деления (двумя точками)</string>
    <string name="input_math_equality">Введите знак равенства</string>
    <string name="input_word_template">Ввод слова: %s. </string>
    <string name="input_phrase_template">Ввод фразы: %s; </string>
    <string name="practice_hint_icon_symbol">\?</string>
    <string name="practice_hint">Подсказка</string>
    <string name="lessons_next">Вперёд</string>
    <string name="lessons_prev">Назад</string>
    <string name="lessons_hint">Подсказка</string>
    <string name="braille_dot_1">точка один</string>
    <string name="braille_dot_2">точка два</string>
    <string name="braille_dot_3">точка три</string>
    <string name="braille_dot_4">точка четыре</string>
    <string name="braille_dot_5">точка пять</string>
    <string name="braille_dot_6">точка шесть</string>
    <string name="braille_dot_1_text">1</string>
    <string name="braille_dot_2_text">2</string>
    <string name="braille_dot_3_text">3</string>
    <string name="braille_dot_4_text">4</string>
    <string name="braille_dot_5_text">5</string>
    <string name="braille_dot_6_text">6</string>
    <string name="preference_title_notifications">Всплывающие уведомления</string>
    <string name="preference_title_buzz">Вибрация</string>
    <string name="preference_summary_buzz">Вибрация в ответ на результат выполнения задания.</string>
    <string name="preference_title_use_golubina_textbook">Шаги с бумажным пособием</string>
    <string name="preference_title_use_slate_stylus">Шаги с брайлевским прибором</string>
    <string name="preference_summary_use_golubina_textbook">
        Показывать шаги с обращением к бумажному пособию Голубиной в разделе "Обучение".
    </string>
    <string name="preference_summary_use_slate_stylus">
        Показывать шаги для выполнения с брайлевским прибором в разделе "Обучение".
    </string>
    <string name="preference_summary_notifications">Включить/отключить краткие всплывающие
        подсказки (кроме самых важных).</string>
    <string name="preference_title_traversal_order">Обход точек в порядке нумерации</string>
    <string name="preference_summary_traversal_order">Работает с Андроид 5.1. Если включено,
        программа экранного доступа обходит точки шеститочия в порядке 1-2-3-4-5-6,
        иначе 1-4-2-5-3-6 (при чтении). При письме, если включено - 4-5-6-1-2-3, иначе 4-1-5-2-6-3.
    </string>
    <string name="preference_title_on_fly_check">Проверка ввода \"на лету\"</string>
    <string name="preference_summary_on_fly_check">Выводить сообщение \"правильно\",
        как только в шеститочии введена корректная комбинация,
        не дожидаясь нажатия кнопки \"вперёд\".
    </string>
    <string name="preference_title_only_seen_materials">Повторять только изученное</string>
    <string name="preference_summary_only_seen_materials">
        В разделе \"Практика\" повторять только символы, пройденные в разделе \"Обучение\".
    </string>
    <string name="preference_title_additional_announcements">
        Автоозвучка текстов
    </string>
    <string name="preference_summary_additional_announcements">
        Автоматически озвучивать тексты (например, задания, справку)
        средством экранного чтения, не дожидаясь фокусировки на текстовом поле.
    </string>
    <string name="preference_title_extended_accessibility">
        Режим повышенной доступности
    </string>
    <string name="preference_summary_extended_accessibility">
        Крупный шрифт в разделе \"Обучение\". Дополнительные кнопки выхода (удобно при использовании программы
        экранного доступа). Шире боковые кнопки в практике и обучении.
    </string>
    <string name="preference_title_additional_qrcode_button">
        Возможность сканировать QR-код
    </string>
    <string name="preference_summary_additional_qrcode_button">
        Отображать в главном меню кнопку \"QR-код\" для игры с карточками Брайля.
    </string>
    <string name="preference_title_is_write_mode_first">
        При вводе столбец с точками 1, 2, 3 справа
    </string>
    <string name="preference_summary_is_write_mode_forst">
        При заходе в практику или шаг с вводом точек столбец с точками 1, 2, 3 находится справа,
        как при письме на брайлевском приборе.
    </string>
    <string name="stats_practice_title">Практика:</string>
    <string name="stats_property_mastered_card">Пройдено карточек</string>
    <string name="stats_property_hints_used">Потребовалось подсказок</string>
    <string name="stats_property_total_attempts">Потрачено попыток</string>
    <string name="stats_title_theory">Обучение:</string>
    <string name="stats_property_steps_passed">Пройдено шагов</string>
    <string name="stats_property_input_steps_passed">Пройдено шагов с вводом</string>
    <string name="flip_card">Шеститочие: письмо/чтение</string>
</resources>