<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="@string/preference_practice_use_only_known_materials"
        android:summary="@string/preference_summary_only_seen_materials"
        android:theme="@style/SwitchPreferenceButton"
        android:title="@string/preference_title_only_seen_materials"
        app:iconSpaceReserved="false" />

    <androidx.preference.SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="@string/preference_extended_accessibility"
        android:summary="@string/preference_summary_extended_accessibility"
        android:theme="@style/SwitchPreferenceButton"
        android:title="@string/preference_title_extended_accessibility"
        app:iconSpaceReserved="false" />

    <androidx.preference.SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="@string/preference_golubina_book_steps_enabled"
        android:summary="@string/preference_summary_use_golubina_textbook"
        android:theme="@style/SwitchPreferenceButton"
        android:title="@string/preference_title_use_golubina_textbook"
        app:iconSpaceReserved="false" />

    <androidx.preference.SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="@string/preference_slate_stylus_steps_enabled"
        android:summary="@string/preference_summary_use_slate_stylus"
        android:theme="@style/SwitchPreferenceButton"
        android:title="@string/preference_title_use_slate_stylus"
        app:iconSpaceReserved="false" />

    <androidx.preference.SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="@string/preference_additional_qrcode_button_enabled"
        android:summary="@string/preference_summary_additional_qrcode_button"
        android:theme="@style/SwitchPreferenceButton"
        android:title="@string/preference_title_additional_qrcode_button"
        app:iconSpaceReserved="false" />

    <androidx.preference.SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="@string/preference_title_on_fly_check"
        android:summary="@string/preference_summary_on_fly_check"
        android:theme="@style/SwitchPreferenceButton"
        android:title="@string/preference_title_on_fly_check"
        app:iconSpaceReserved="false" />

    <androidx.preference.SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="@string/preference_enable_buzz"
        android:summary="@string/preference_summary_buzz"
        android:theme="@style/SwitchPreferenceButton"
        android:title="@string/preference_title_buzz"
        app:iconSpaceReserved="false" />

    <androidx.preference.SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="@string/preference_enable_toasts"
        android:summary="@string/preference_summary_notifications"
        android:theme="@style/SwitchPreferenceButton"
        android:title="@string/preference_title_notifications"
        app:iconSpaceReserved="false" />

    <androidx.preference.SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="@string/preferences_is_write_mode_first"
        android:summary="@string/preference_summary_is_write_mode_forst"
        android:theme="@style/SwitchPreferenceButton"
        android:title="@string/preference_title_is_write_mode_first"
        app:iconSpaceReserved="false" />

    <androidx.preference.SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="@string/preference_traverse_dots_in_enumeration_order"
        android:summary="@string/preference_summary_traversal_order"
        android:theme="@style/SwitchPreferenceButton"
        android:title="@string/preference_title_traversal_order"
        app:iconSpaceReserved="false" />

    <androidx.preference.SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="@string/preference_enable_additional_announcements"
        android:summary="@string/preference_summary_additional_announcements"
        android:theme="@style/SwitchPreferenceButton"
        android:title="@string/preference_title_additional_announcements"
        app:iconSpaceReserved="false" />

</androidx.preference.PreferenceScreen>