<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="cardViewModel"
            type="com.github.braillesystems.learnbraille.ui.screens.practice.CardViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.screens.practice.CardFragment">

        <TextView
            android:id="@+id/letter_caption"
            style="@style/bigLetterCaptionStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/letter" />

        <TextView
            android:id="@+id/marker_description"
            style="@style/dotsInfoStyle"
            app:layout_constraintBottom_toTopOf="@+id/braille_dots"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="" />

        <com.github.braillesystems.learnbraille.ui.views.InputBigLetterView
            android:id="@+id/letter"
            style="@style/bigLetterStyle"
            android:text=""
            app:layout_constraintBottom_toTopOf="@+id/braille_dots"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="M" />

        <com.github.braillesystems.learnbraille.ui.views.BrailleDotsView
            android:id="@+id/braille_dots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="@dimen/braille_dots_scale_of_view"
            android:scaleY="@dimen/braille_dots_scale_of_view"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="@dimen/practice_dots_vertical_bias" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/hint_button"
            android:layout_width="@dimen/side_buttons_width"
            android:layout_height="@dimen/practice_buttons_height"
            android:contentDescription="@string/practice_hint"
            android:onClick="@{() -> cardViewModel.onHint()}"
            android:paddingStart="@dimen/practice_buttons_icon_hint_padding"
            android:paddingEnd="@dimen/practice_buttons_icon_hint_padding"
            android:scaleType="fitCenter"
            android:text="@string/practice_hint_icon_symbol"
            android:textColor="@color/colorOnPrimary"
            android:textSize="@dimen/practice_buttons_icon_hint_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="@dimen/practice_buttons_vertical_bias"
            app:shapeAppearanceOverlay="@style/sideLeftButtonsShape"
            tools:ignore="SpUsage" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/flip_button"
            style="@style/sideIconButtons"
            android:layout_width="@dimen/side_buttons_width"
            android:layout_height="@dimen/practice_buttons_small_height"
            android:contentDescription="@string/flip_card"
            app:backgroundTint="@color/colorSecondary"
            app:icon="@drawable/ic_flip_white_24dp"
            app:layout_constraintBottom_toTopOf="@+id/next_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:shapeAppearanceOverlay="@style/sideRightButtonsShape" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_button"
            style="@style/sideIconButtons"
            android:layout_width="@dimen/side_buttons_width"
            android:layout_height="@dimen/practice_buttons_height"
            android:contentDescription="@string/lessons_next"
            android:onClick="@{() -> cardViewModel.onCheck()}"
            app:icon="@drawable/navigate_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="@dimen/practice_buttons_vertical_bias"
            app:shapeAppearanceOverlay="@style/sideRightButtonsShape" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>